######################################################################################
### 1) Where do we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(petsc_cxx)
SET(SAMPLE_SRCS ${SAMPLE_SRCS} PARENT_SCOPE)

######################################################################################
